--- a/Changes
+++ b/Changes
@@ -1,20 +1,103 @@
 Revision history for Perl module DBIx::Easy.
 
-* Thu Dec 16 23:15:37 1999 CET Stefan Hornburg <racke@linuxia.net>
+* Mon Aug 28 23:42:36 2000 CEST Stefan Hornburg <racke@linuxia.de>
+DBIx::Easy v0.07 released
+
+* Wed Jul 19 00:07:26 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(Easy.pm): documentation for is_table and tables added, new method
+sequences
+(scripts/dbs_dumptabstruct): dump sequences too
+
+* Mon Jul 17 12:55:53 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_dumptabstruct): new option --pipe
+
+* Sun Jul 16 16:24:49 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): --table and --columns are working together now,
+handle keys excessing the column size
+
+* Sun Jul 16 13:01:44 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): problems with --cleanse fixed
+
+* Tue Jul  4 16:18:32 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(Easy.pm:view, script/dbs_printtab, scripts/dbs_update): new option --columns
+(scripts/dbs_update): new option --cleanse
+
+* Sat Jul  1 12:34:28 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): handles special characters and multilines
+with CSV format now
+
+* Fri Jun 23 11:36:27 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): several new options
+
+* Mon May  8 02:29:47 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): remove carriage returns from input file
+
+* Sun May  7 16:47:59 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): renember table name if given explicitly
+
+* Sat Apr  1 15:39:16 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_dumptabstruct, scripts/dbs_dumptabdata): new option --tables
+
+* Thu Mar 23 20:15:13 2000 CET Stefan Hornburg <racke@linuxia.de>
+(Easy.pm): better method to determine directory, force commit
+documented in POD
+(scripts/dbs_empty): ensure that all changes are commited
+
+* Thu Mar 23 16:05:33 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): expand newlines
+(Easy.pm): escape newlines in view method
+
+* Wed Mar 22 16:16:22 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_empty): new option --tables
+
+* Mon Mar 20 00:22:14 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): more verbose error messages, ensure that
+all changes are committed
+
+* Sun Mar 19 11:20:25 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_dumptab*): typo fixed
+(scripts/dbs_dumptabdata): new option --use-printtab
+
+* Sat Mar 18 23:15:22 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_printtab): new script
+(Easy.pm): added option separator to view method
+
+* Tue Feb 29 19:33:13 2000 CET Stefan Hornburg <racke@linuxia.de>
+(Easy.pm): made more verbose if connection cannot be established
+method view fixed in respect to limit option
+             
+* Fri Jan 21 10:59:03 2000 CET Stefan Hornburg <racke@linuxia.de>
+(Easy.pm): optional parameter CONDITION added to method makemap
+
+* Thu Jan 20 12:56:10 2000 CET Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_empty, scripts/dbs_dumptabstruct, scripts/dumptabdata):
+new option --exclude-matching-tables
+
+* Sat Jan 15 15:24:30 2000 CET Stefan Hornburg <racke@linuxia.de>
+
+(Easy.pm): don't call rollback within error handler 
+if AutoCommit is enabled
+
+* Sun Jan  2 17:48:46 2000 CET Stefan Hornburg <racke@linuxia.de>
+
+(Easy.pm): new method is_table
+(scripts/dbs_update): new option --map
+
+* Thu Dec 16 23:15:37 1999 CET Stefan Hornburg <racke@linuxia.de>
 
 DBIx::Easy v0.06 released
 
-* Sat Dec  4 23:19:20 1999 CET Stefan Hornburg <racke@linuxia.net>
+* Sat Dec  4 23:19:20 1999 CET Stefan Hornburg <racke@linuxia.de>
 
 (scripts/dbs_update): asks for a password if authentification fails,
 option -f/--file added
 (Easy.pm): new method passwd
 
-* Wed Dec  1 11:45:00 1999 CET Stefan Hornburg <racke@linuxia.net>
+* Wed Dec  1 11:45:00 1999 CET Stefan Hornburg <racke@linuxia.de>
 
 (scripts/dbs_dumptabdata, scripts/dbs_empty): new script(s)
 
-* Fri Nov 26 01:01:22 1999 CET Stefan Hornburg <racke@linuxia.net>
+* Fri Nov 26 01:01:22 1999 CET Stefan Hornburg <racke@linuxia.de>
 
 (scripts/dbs_dumptabstruct): POD documentation added
 (scripts/dbs_update): fixed old script name in POD section
