--- a/Changes
+++ b/Changes
@@ -1,6 +1,39 @@
 Revision history for Perl module DBIx::Easy.
 
+* Fri Sep  8 21:58:04 2000 CEST Stefan Hornburg <racke@linuxia.de>
+
+DBIx::Easy v0.08 released
+
+* Fri Sep  8 21:56:59 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): strip whitespace from column names found
+in the headline
+
+* Thu Sep  7 17:04:24 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): comma is now the default field separator
+for CSV format, field separator can selected from the commandline
+
+* Tue Sep  5 15:14:28 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): brown paper bug fixed that kept --cleanse 
+from working by growing the SQL statement which each record to be cleansed
+
+* Sun Sep  3 20:37:41 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): bug fixed that may be trigged by the combination 
+of --headline and --map, assorted error messages improved, example
+for --routine added to documentation
+
+* Sun Sep  3 19:03:08 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): strip blanks from parameter list for --columns
+
+* Sun Sep  3 17:03:46 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): --columns can be used to exclude columns
+explicitly
+
+* Fri Sep  1 02:20:09 2000 CEST Stefan Hornburg <racke@linuxia.de>
+(scripts/dbs_update): first field may contain table name and
+start column
+
 * Mon Aug 28 23:42:36 2000 CEST Stefan Hornburg <racke@linuxia.de>
+
 DBIx::Easy v0.07 released
 
 * Wed Jul 19 00:07:26 2000 CEST Stefan Hornburg <racke@linuxia.de>
@@ -74,7 +107,6 @@ method view fixed in respect to limit option
 new option --exclude-matching-tables
 
 * Sat Jan 15 15:24:30 2000 CET Stefan Hornburg <racke@linuxia.de>
-
 (Easy.pm): don't call rollback within error handler 
 if AutoCommit is enabled
 
@@ -88,16 +120,13 @@ if AutoCommit is enabled
 DBIx::Easy v0.06 released
 
 * Sat Dec  4 23:19:20 1999 CET Stefan Hornburg <racke@linuxia.de>
-
 (scripts/dbs_update): asks for a password if authentification fails,
 option -f/--file added
 (Easy.pm): new method passwd
 
 * Wed Dec  1 11:45:00 1999 CET Stefan Hornburg <racke@linuxia.de>
-
 (scripts/dbs_dumptabdata, scripts/dbs_empty): new script(s)
 
 * Fri Nov 26 01:01:22 1999 CET Stefan Hornburg <racke@linuxia.de>
-
 (scripts/dbs_dumptabstruct): POD documentation added
 (scripts/dbs_update): fixed old script name in POD section
