--- a/README
+++ b/README
@@ -2,7 +2,7 @@ DBIx::Easy - Easy to Use DBI Interface
 **************************************
 
    * The homepage of `DBIx::Easy' is http://www.linuxia.de/DBIx/Easy/.
-   * The latest version (currently 0.07) is always available as 
+   * The latest version (currently 0.08) is always available as 
      http://www.linuxia.de/DBIx/Easy/DBIx-Easy.tar.gz.
    * See the manual page for more informations.
 
@@ -17,7 +17,7 @@ Installation
 
 
 tar -xzf DBIx-Easy.tar.gz
-cd DBIx-Easy-0.07
+cd DBIx-Easy-0.08
 perl Makefile.PL
 make
 make install
@@ -29,12 +29,12 @@ Scripts
 The `DBIx::Easy' package contains the following scripts: 
 
 
-Name                Description                             Remarks
-`dbs_dumptabdata'   creates file set with SQL table data    
-`dbs_dumptabstruct' creates file set with SQL table schemas 
-`dbs_empty'         erases all data from a SQL database     
-`dbs_printtab'      prints data from SQL table              New in 0.07
-`dbs_update'        update SQL database from text file      
+Name                Description                             Remarks     
+`dbs_dumptabdata'   creates file set with SQL table data                
+`dbs_dumptabstruct' creates file set with SQL table schemas             
+`dbs_empty'         erases all data from a SQL database                 
+`dbs_printtab'      prints data from SQL table              New in 0.07 
+`dbs_update'        update SQL database from text file                  
 
 
 Debian Package
@@ -42,10 +42,29 @@ Debian Package
 
 This software is also available as Debian package, maintained by Dennis Schön 
 <dschoen@rio.gt.owl.de>. The download address is 
-http://www.linuxia.de/DBIx/Easy/libdbix-easy-perl_0.07-1_all.deb.
+http://www.linuxia.de/DBIx/Easy/libdbix-easy-perl_0.08-1_all.deb.
 
 Changes
 *******
+
+0.08
+****
+
+`dbs_update'
+============
+
+   * brown paper bug fixed that kept --cleanse from working by growing the
+     SQL statement which each record to be cleansed
+   * bug fixed that may be triggered by the combination of `--headline' and `
+     --map'
+   * strip whitespace from column names found in the headline of the input
+   * comma is now the default field separator for CSV format, field
+     separator can selected from the commandline now
+   * `--columns' can be used to exclude columns explicitly
+   * strip blanks from parameter list for `--columns'
+   * first field may contain table name and start column instead of table
+     name only
+   * example for `--routine' added to documentation
 
 0.07
 ****
