--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dbix-easy-perl (0.09-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Dennis Schoen <dennis@debian.org>  Mon, 15 Jan 2001 23:18:36 +0100
+
 dbix-easy-perl (0.08-1) unstable; urgency=high
 
   * New upstream version
