--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+dbix-easy-perl (0.14-1) unstable; urgency=low
+
+  * New upstream version (Closes: #119282) 
+
+ -- Dennis Schoen <dennis@debian.org>  Sun,  9 Dec 2001 02:13:00 +0100
+
+dbix-easy-perl (0.13-2) unstable; urgency=low
+
+  * removed manpage in /usr/man (Closes: #116051)
+
+ -- Dennis Schoen <dennis@debian.org>  Thu, 18 Oct 2001 11:45:37 +0200
+
+dbix-easy-perl (0.13-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Dennis Schoen <dennis@debian.org>  Thu, 20 Sep 2001 21:07:31 +0200
+
+dbix-easy-perl (0.12-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Dennis Schoen <dennis@debian.org>  Tue, 17 Jul 2001 13:35:36 +0200
+
+dbix-easy-perl (0.11-2) unstable; urgency=low
+
+  * no longer ship .packlist file (Closes: #104756)
+
+ -- Dennis Schoen <dennis@debian.org>  Tue, 17 Jul 2001 11:51:08 +0200
+
+dbix-easy-perl (0.11-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Dennis Schoen <dennis@debian.org>  Sun, 24 Jun 2001 23:49:04 +0200
+
 dbix-easy-perl (0.10-1) unstable; urgency=low
 
   * New upstream version
@@ -36,6 +72,4 @@ dbix-easy-perl (0.06-1) unstable; urgency=low
 
  -- Dennis Schoen <dschoen@rio.gt.owl.de>  Thu, 25 Nov 1999 19:03:09 +0100
 
-Local variables:
-mode: debian-changelog
-End:
+
