--- a/README
+++ b/README
@@ -2,7 +2,7 @@ DBIx::Easy - Easy to Use DBI Interface
 **************************************
 
    * The homepage of `DBIx::Easy' is http://www.linuxia.de/DBIx/Easy/.
-   * The latest version (currently 0.14) is always available as 
+   * The latest version (currently 0.15) is always available as 
      http://www.linuxia.de/DBIx/Easy/DBIx-Easy.tar.gz.
    * See the manual page for more informations.
 
@@ -10,14 +10,15 @@ Requirements
 ************
 
    * DBI (URL: http://www.symbolstone.org/technology/perl/DBI/index.html)
-   * `DBD::Pg', `DBD::mysql' or `DBD::mSQL' (ask for other database drivers)
+   * `DBD::Pg', `DBD::mysql', `DBD::mSQL', `DBD::ODBC' or `DBD::sybase'
+     (ask for other database drivers)
 
 Installation
 ************
 
 
 tar -xzf DBIx-Easy.tar.gz
-cd DBIx-Easy-0.14
+cd DBIx-Easy-0.15
 perl Makefile.PL
 make
 make install
@@ -42,10 +43,18 @@ Debian Package
 
 This software is also available as Debian package, maintained by Dennis Schön 
 <dennis@cobolt.net>. The download address is 
-http://www.linuxia.de/DBIx/Easy/libdbix-easy-perl_0.14-1_all.deb.
+http://www.linuxia.de/DBIx/Easy/libdbix-easy-perl_0.15-1_all.deb.
 
 Changes
 *******
+
+0.15
+****
+
+`Easy.pm'
+=========
+
+   * support for ODBC and Sybase added
 
 0.14
 ****
@@ -190,3 +199,6 @@ Authors
 Stefan Hornburg <racke@linuxia.de>
 
 Dennis Schön <dennis@cobolt.net>
+
+Support for Sybase and ODBC provided by David B. Bitton 
+<david@codenoevil.com>.
