--- a/Changes
+++ b/Changes
@@ -1,5 +1,63 @@
 Revision history for Perl module DBIx::Easy.
 
+* Sat Oct  8 01:24:40 2005 CEST
+
+DBIx::Easy v0.16 released
+
+* Thu Jan 13 17:57:29 2005 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): connect first before issue prepare statement
+
+* Sun Jan  9 13:34:45 2005 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): remove quotes from table names in tables method
+(dbs_dumptabstruct): put table names into quotes in system commands
+
+* Mon Jul  5 15:30:56 2004 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): don't call passwd method on Win32 machines
+
+* Tue Feb 10 14:10:04 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): return on connections errors from various methods to allow failover with custom error handler
+(Import.pm): new module
+
+* Mon Feb  9 22:54:01 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(dbs_update): new option --map-filter
+(Easy.pm): Sybase support fixed, allow empty database name for Sybase, avoid
+empty parentheses on some fatal errors
+
+* Wed Jan 21 18:15:03 2004 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(dbs_update): don't insert a column twice if used both in --map and --columns
+
+* Sat Oct  4 00:04:24 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): rollback method added
+
+* Wed Oct  1 13:08:46 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): delete with empty conditions parameter fails, new methods
+describe_table, create_table
+
+* Mon Jun 16 14:07:13 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): explicit return added to cache method avoids malfunction if
+method columns is called first
+
+* Tue May 13 14:40:21 2003 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): scalar references allow embedding strings without further quoting
+in the update method as well
+
+* Thu Mar 13 17:38:09 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): fixed fallback in passwd method
+
+* Wed Mar  5 18:15:09 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): new method put
+
+* Sun Feb  2 11:28:27 2003 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): makemap now can be directed to put the whole record into the
+values of the resulting hash
+
+* Mon Dec 16 15:33:20 2002 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(scripts/dbs_update): allow input files in XLS format
+
+* Fri Apr 19 19:23:49 2002 CEST Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): new display method
+(scripts/dbs_dumptabstruct): --filter option added
+
 * Sat Mar 16 13:00:32 2002 CET Stefan Hornburg (Racke) <racke@linuxia.de>
 
 DBIx::Easy v0.15 released
