--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl module DBIx::Easy.
 
+* Thu Jan  8 19:32:57 2009 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+
+DBIx::Easy v0.18 released
+
+* Mon Dec 15 09:14:31 2008 CET Stefan Hornburg (Racke) <racke@linuxia.de>
+(Easy.pm): additional pattern for login failure to PostgreSQL databases
+
+* Fri Apr 18 15:21:08 2008 CEST Jure Kodzoman <jure@tenalt.com>
+(Easy.pm): new method do_without_transaction
+
 * Mon May 21 11:38:02 2007 CEST
 
 DBIx::Easy v0.17 released
