--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dbix-easy-perl (0.18-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Stefan Hornburg (Racke) <racke@linuxia.de>  Thu,  8 Jan 2009 19:33:37 +0100
+
 dbix-easy-perl (0.17-1) unstable; urgency=low
 
   * New upstream version
