--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl module DBIx::Easy.
 
+* Tue Jan 28 17:48:27 2014 CET
+
+DBIx::Easy v0.21 released.
+
+* Tue Jan 28 15:42:38 2014 CET Marco Pessotto <melmothx@gmail.com>
+
+Fix regular expression to extract table names.
+Fix bug with incoming parameters in is_table method.
+
 * Tue Nov 19 11:16:49 2013 CET
 
 DBIx::Easy v0.20 released.
